--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,97 @@
     box-sizing: border-box;
     transition: 0.5s;
 }
+/*Nav bar*/
+.navbar{
+    width: 100%;
+    position: fixed;
+    background-image: linear-gradient(to right, #516091,#05806f);
+    display: flex;
+    justify-content: flex-end;
+    z-index: 2;
+}
+.navbar p{
+    position: absolute;
+    left: 10px;
+    color: white;
+    font-family: 'Playfair Display', serif;
+    font-size:calc(2vw + 15px);
+    opacity: 0;
+    transition: 0.5s;
+
+}
+.icon{
+    float: right;
+    right: 0%;
+    padding: 10px;
+}
+.material-icons{
+    color: white;
+}
+.material-icons:hover{
+    cursor: pointer;
+}
+/* The Overlay (background) */
+.overlay {
+    /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+    height: 100%;
+    width: 0;
+    position: fixed; /* Stay in place */
+    z-index: 3; /* Sit on top */
+    left: 0;
+    top: 0;
+    background-color: rgb(0,0,0); /* Black fallback color */
+    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    display: flex;
+    justify-content: center;
+  }
+  
+  /* Position the content inside the overlay */
+  .overlay-content {
+    position: relative;
+    top: 25%; /* 25% from the top */
+    width: 50%; /* 100% width */
+    text-align: center; /* Centered text/links */
+    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+    
+  }
+  
+  /* The navigation links inside the overlay */
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    border-radius: 10px;
+    font-size: 36px;
+    color: #ffffff;
+    display: block; /* Display block instead of inline */
+    transition: 0.5s; /* Transition effects on hover (color) */
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .overlay a:hover, .overlay a:focus {
+    color: black;
+  }
+  
+  /* Position the close button (top right corner) */
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+  
+  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+      font-size: 40px;
+      top: 15px;
+      right: 35px;
+    }
+  }
+  /*header*/
 .header{
     width: 100%;
     background-image: linear-gradient(to right, #516091,#05806f);
@@ -45,7 +136,7 @@
 
 }
 .right{
-    background-image: url("main3.png");
+    background-image: url("img/main1.png");
 }
 
 /*.right::after, .right::before{
@@ -132,21 +223,60 @@
   }
 /* individual containers*/
 .medicine{
-    background-image: url("medicine.jpg");
+    background-image: url("img/medicine.jpg");
 }
 .symptoms{
-    background-image: url("symptoms.jpg");
+    background-image: url("img/symptoms.jpg");
 }
 .consult{
-    background-image: url("consult.jpg");
+    background-image: url("img/consult.jpg");
 }
 .exercise{
-    background-image: url("exercise.jpg");
+    background-image: url("img/exercise.jpg");
 }
 .wellness{
-    background-image: url("wellness.jpg");
+    background-image: url("img/wellness.jpg");
 }
 
+.contact{
+    width: 100%;
+    background-image: linear-gradient(to right, #516091,#05806f);
+    font-family: 'Playfair Display', serif;
+    font-size: calc(4vw + 40px);
+    color: white;
+    text-align: center;
+    margin-top: 50px;
+}
+.contact .subtitle{
+    opacity: 1;
+    font-size: calc(2vw + 10px);
+}
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+    margin-bottom: 30px;
+  }
+.fa:hover {
+    opacity: 0.7;
+    color: white;
+}
+
+.fa-instagram {
+  background: #f03d10;
+  color: white;
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
 
 
 
@@ -160,4 +290,9 @@
         height: 50%;
         width: 100%;
 }
+}
+@media screen and (max-width:600px ){
+    .container{
+        width: 90%;
+    }
 }
