--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@
 }
 .material-icons{
     color: white;
+    font-size: 35px;
 }
 .material-icons:hover{
     cursor: pointer;
@@ -43,10 +44,10 @@
     z-index: 3; /* Sit on top */
     left: 0;
     top: 0;
-    background-color: rgb(0,0,0); /* Black fallback color */
-    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0, 0.9); 
+    overflow-x: hidden; 
+    transition: 0.5s; 
     display: flex;
     justify-content: center;
   }
@@ -54,26 +55,29 @@
   /* Position the content inside the overlay */
   .overlay-content {
     position: relative;
-    top: 25%; /* 25% from the top */
-    width: 50%; /* 100% width */
-    text-align: center; /* Centered text/links */
-    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+    top: 25%; 
+    width: 50%; 
+    text-align: center; 
+    margin-top: 30px; 
     
   }
   
   /* The navigation links inside the overlay */
-  .overlay a {
+  .overlay button {
     padding: 8px;
+    margin: 5px auto;
+    width: 50%;
     text-decoration: none;
     border-radius: 10px;
+    border: none;
     font-size: 36px;
     color: #ffffff;
-    display: block; /* Display block instead of inline */
-    transition: 0.5s; /* Transition effects on hover (color) */
+    display: block; 
+    transition: 0.5s; 
   }
   
   /* When you mouse over the navigation links, change their color */
-  .overlay a:hover, .overlay a:focus {
+  .overlay button:hover, .overlay button:focus {
     color: black;
   }
   
@@ -83,9 +87,10 @@
     top: 20px;
     right: 45px;
     font-size: 60px;
+    text-decoration: none;
   }
   
-  /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+  
   @media screen and (max-height: 450px) {
     .overlay a {font-size: 20px}
     .overlay .closebtn {
@@ -101,10 +106,12 @@
     height: 500px;
     padding: 50px;
     display: flex;
+    position: relative;
+    top: 20px;
 }
 .left{
     color: #EEF3AD;
-    display: flex;
+    text-align: center;
     justify-content: center;
     align-items: center;
     font-family: 'Playfair Display', serif;
@@ -188,11 +195,22 @@
     font-family: 'Playfair Display', serif;
     font-size: calc(4vw + 40px);
 }
+.header .title{
+    font-size: calc(7vw + 40px);
+    display: inline-block;
+}
+
 .subtitle{
     font-family: 'Playfair Display', serif;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 3vw;
     opacity: 0;
+}
+.header .subtitle{
+    font-size: calc(2vw + 20px);
+    opacity: 1;
+
+
 }
 .container:hover{
     box-shadow: 10px 10px 10px lightslategray;
@@ -222,6 +240,26 @@
     transition: 0.3s, background-position 0.3s 0.3s, color 0.3s 0.3s;
   }
 /* individual containers*/
+.about{
+    margin-top: 50px;
+    width: 100%;
+    height: 500px;
+    border: none;
+    background-image: url("img/Health _Isometric.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: flex;
+    justify-content: center;
+}
+.about .container_text{
+    color: black;
+    width: 80%;
+}
+.about .subtitle{
+    font-size: calc(2vw + 30px);
+    opacity: 1;
+}
 .medicine{
     background-image: url("img/medicine.jpg");
 }
@@ -237,6 +275,56 @@
 .wellness{
     background-image: url("img/wellness.jpg");
 }
+/* The Modal (background) */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 3; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-image: url("img/404.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    text-align: center;
+    border-radius: 20px;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+    height: 600px;
+  }
+  .modal-content .title{
+      font-size:  calc(4vw + 40px);
+  }
+  .modal-content .subtitle{
+      opacity: 1;
+      font-size: (2vw + 50px);
+  }
+  
+  /* The Close Button */
+  .close {
+    color: rgb(0, 0, 0);
+    float: right;
+    font-size: 40px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
 .contact{
     width: 100%;
