--- a/styles_exercise.css
+++ b/styles_exercise.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    transition: 0.5s;
 }
 /*Nav bar*/
 .navbar{
@@ -41,6 +42,8 @@
     height: 500px;
     padding: 50px;
     display: flex;
+    position: relative;
+    top: 40px;
 }
 .left{
     color: #EEF3AD;
@@ -82,61 +85,64 @@
 
 }
 .right{
-    background-image: url("img/Brazuca\ -\ Standing.png");
+    background-image: url("img/main4.png");
+}
+.head{
+    width: 100%;
+    text-align: center;
+    font-size: 30px;
+    font-family: 'Playfair Display', serif;
+    background-color: teal;
+    color: white;
+    margin-top: 70px;
+    height: 50px;
+
 }
 .container{
     height: auto;
-    margin-top: 50px;
-    text-align: center;
     display: flex;
     justify-content: space-between;
-    
+    margin-top: 50px;
     flex-wrap: wrap;
+    align-items: center;
 
 }
-.card {
+.card{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: auto;
-    text-align: center;
-    margin: 10px;
-  }
-  
-  .card .title {
-    color: grey;
-    font-size: 18px;
-  }
-  
-  button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: rgb(61, 85, 87);
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 25px;
-    transition: 0.5s;
+    height: auto;
+    margin-top: 10px;
+}
+.card-text{
+    font-size: 20px;
+    color: black;
+
+}
+.btn {
     position: absolute;
     bottom: 0px;
     left: 0px;
-  }
-  
-  a {
-    text-decoration: none;
-    font-size: 22px;
-    color: black;
-  }
-  .a:hover{
-      color: #000;
+    width: 100%;
+    background-color: cornflowerblue;
+    font-size: 20px;
+    color: white;
+    
+}
+.btn:hover{
+    color: white;
+    background-color: teal;
 
-  }
-  button:hover{
-    background-color:#516091 ;
-  }
+}
+.card:hover{
+    box-shadow: 20px 20px 20px 0 rgba(0, 0, 0, 0.2);
 
+}
+.para{
+    text-align: center;
+    margin: 30px;
+    font-size: 30px;
+    font-family: 'Playfair Display', serif;
+    font-family: 'Source Sans Pro', sans-serif;
+}
 .contact{
     width: 100%;
     background-image: linear-gradient(to right, #516091,#05806f);
