--- a/styles_wellness.css
+++ b/styles_wellness.css
@@ -74,69 +74,27 @@
     opacity: 0;
 }
 @keyframes rigthanimation {
-    0%{transform: translateX(0%);}
-    25%{transform: translateX(-5%);}
-    50%{transform: translateX(0%);}
-    75%{transform: translateX(5%);}
-    100%{transform: translateX(0%);}
+    0%{transform: translateY(0%);}
+    25%{transform: translateY(-5%);}
+    50%{transform: translateY(0%);}
+    75%{transform: translateY(5%);}
+    100%{transform: translateY(0%);}
 
 }
 .right{
-    background-image: url("img/Brazuca\ -\ Standing.png");
+    background-image: url("img/Happy face_Isometric.png");
 }
 .container{
     height: auto;
     margin-top: 50px;
     text-align: center;
-    display: flex;
-    justify-content: space-between;
-    
-    flex-wrap: wrap;
-
-}
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: auto;
-    text-align: center;
-    margin: 10px;
-  }
-  
-  .card .title {
-    color: grey;
-    font-size: 18px;
-  }
-  
-  button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: rgb(61, 85, 87);
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
     font-size: 25px;
-    transition: 0.5s;
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-  }
-  
-  a {
-    text-decoration: none;
-    font-size: 22px;
-    color: black;
-  }
-  .a:hover{
-      color: #000;
-
-  }
-  button:hover{
-    background-color:#516091 ;
-  }
-
+}
+.head{
+    font-size: 50px;
+    background-color: #EEF3AD;
+    font-family: 'Courier New', Courier, monospace;
+}
 .contact{
     width: 100%;
     background-image: linear-gradient(to right, #516091,#05806f);
