--- a/styles_balance.css
+++ b/styles_balance.css
@@ -44,11 +44,11 @@
 }
 .left{
     color: #EEF3AD;
-    display: flex;
+    text-align: center;
     justify-content: center;
     align-items: center;
     font-family: 'Playfair Display', serif;
-    font-size: calc(7vw + 40px);
+    font-size: calc(5vw + 40px);
     width: 50%;
     position: relative;
 }
@@ -74,70 +74,70 @@
     opacity: 0;
 }
 @keyframes rigthanimation {
-    0%{transform: scale(100%,100%);}
-    50%{transform: scale(108%,108%);}
-    
-    100%{transform: scale(100%,100%);}
+    0%{transform: translateY(0%);}
+    25%{transform: translateY(-5%);}
+    50%{transform: translateY(0%);}
+    75%{transform: translateY(5%);}
+    100%{transform: translateY(0%);}
 
 }
 .right{
-    background-image: url("img/Brazuca\ -\ Standing.png");
+    background-image: url("img/Healthy\ meal\ _Isometric.png");
 }
 .container{
     height: auto;
+}
+.img{
     margin-top: 50px;
+    margin-bottom: 30px;
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#i1{
+    background-image: url("img/cereals-563796_1280.jpg") ;
+}
+#i2{
+    background-image: url("img/berries-2277_1280.jpg") ;
+}
+#i3{
+    background-image: url("img/veg.jpg") ;
+}
+.head{
+    background-color: #EEF3AD;
+    font-size: 30px;
+    padding: 10px;
+    border-radius: 10px;
+    font-family: 'Playfair Display', serif;
+    font-family: 'Source Sans Pro', sans-serif;
     text-align: center;
-    display: flex;
-    justify-content: space-between;
     
-    flex-wrap: wrap;
+}
+.benefit{
+    margin-top: 30px;
+    background-color: #EEF3AD;
+    font-size: 30px;
+    padding: 10px;
+    border-radius: 10px;
+    font-family: 'Playfair Display', serif;
+    font-family: 'Source Sans Pro', sans-serif;
+    text-align: center;
 
 }
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    margin: auto;
-    text-align: center;
-    margin: 10px;
-    height: 700px;
-  }
-  .card:hover{
-    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.3);
-  }
-  .card .title {
-    color: grey;
-    font-size: 18px;
-  }
-  
-  button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: rgb(61, 85, 87);
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 25px;
-    transition: 0.5s;
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-  }
-  
-  a {
-    text-decoration: none;
-    font-size: 22px;
-    color: black;
-  }
-  .a:hover{
-      color: #000;
-
-  }
-  button:hover{
-    background-color:#516091 ;
-  }
+.accordion{
+    margin-top: 50px;
+}
+.accordion-header{
+    background-color: cadetblue;
+}
+.accordion-button{
+    font-size: 30px;
+    background-color: #87ebd5;
+}
+.accordion-body{
+    font-size: 20px;
+}
 
 .contact{
     width: 100%;
@@ -165,25 +165,20 @@
     color: white;
 }
 
-
-.fa-linkedin {
-  background: #3692fa;
+.fa-instagram {
+  background: #f03d10;
+  color: white;
+}
+.fa-twitter {
+  background: #55ACEE;
   color: white;
 }
 
-.fa-instagram {
-    background: #f03d10;
-    color: white;
-  }
-  .fa-twitter {
-    background: #55ACEE;
-    color: white;
-  }
-  
-  .fa-google {
-    background: #dd4b39;
-    color: white;
-  }
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
 
 
 @media screen and (max-width:700px ){
@@ -194,8 +189,5 @@
     .right, .left{
         height: 50%;
         width: 100%;
-}
-.card{
-    width: 90%;
 }
 }
