--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,45 @@
     box-sizing: border-box;
     transition: 0.5s;
 }
+.loader{
+    background-color: white;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.spinner-4 {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 8px solid #0000;
+    border-right-color: #ffa50097;
+    position: relative;
+    animation: s4 1s infinite linear;
+  }
+  .spinner-4:before,
+  .spinner-4:after {
+    content: "";
+    position: absolute;
+    inset:-8px;
+    border-radius: 50%;
+    border:inherit;
+    animation:inherit;
+    animation-duration: 2s;
+  }
+  .spinner-4:after {
+    animation-duration: 4s;
+  }
+  
+  @keyframes s4 {
+    100% {transform: rotate(1turn)}
+  }
+  
+  
 /*Nav bar*/
 .navbar{
     width: 100%;
@@ -66,7 +105,11 @@
   .overlay button {
     padding: 8px;
     margin: 5px auto;
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
     text-decoration: none;
     border-radius: 10px;
     border: none;
@@ -76,12 +119,11 @@
     transition: 0.5s; 
   }
   
-  /* When you mouse over the navigation links, change their color */
   .overlay button:hover, .overlay button:focus {
     color: black;
   }
   
-  /* Position the close button (top right corner) */
+  
   .overlay .closebtn {
     position: absolute;
     top: 20px;
@@ -92,7 +134,9 @@
   
   
   @media screen and (max-height: 450px) {
-    .overlay a {font-size: 20px}
+    .overlay button {font-size: 20px;
+    width: 70%;
+    }
     .overlay .closebtn {
       font-size: 40px;
       top: 15px;
