--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     z-index: 100;
+}
+.message{
+    font-size: calc(1vw + 10px);
+    font-family: 'Playfair Display', serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .spinner-4 {
